...
                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Logo" translatesAutoresizingMaskIntoConstraints="NO" id="WJq-cf-bqU">
                                <rect key="frame" x="204" y="50" width="191" height="20"/>
                                <animations/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="191" id="aSs-2g-RyU"/>
                                    <constraint firstAttribute="height" constant="20" id="x2V-88-mBr"/>
                                </constraints>
...
                                            <constraint firstAttribute="height" constant="3" id="M7G-dO-lLP"/>
                                        </constraints>
                                    </view>
                                    <textField opaque="NO" clipsSubviews="YES" tag="123" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="$6,344.63" textAlignment="center" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="kVD-L4-GOW">
                                        <rect key="frame" x="50" y="81" width="500" height="54"/>
                                        <animations/>
                                        <accessibility key="accessibilityConfiguration" identifier="AUDTextField"/>
                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                        <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="56"/>
                                        <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
                                    </textField>
                                </subviews>
                                <animations/>
...
                                    <constraint firstItem="FlW-gF-dXM" firstAttribute="centerY" secondItem="qvy-cc-Y6P" secondAttribute="centerY" id="vWD-yJ-40i"/>
                                </constraints>
                            </view>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SJl-VH-GyO">
                                <rect key="frame" x="0.0" y="390" width="600" height="120"/>
                                <animations/>
                                <accessibility key="accessibilityConfiguration" identifier="AmountDisplayLabel"/>
                                <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="56"/>
                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                <nil key="highlightedColor"/>
                            </label>
                        </subviews>
                        <animations/>
...
