...
    @IBOutlet weak var amountDisplayLabel: UILabel!
    
    //variables
    var appDelegate = AppDelegate()
    var pagingScrollView = UIScrollView()
    
    let currencyArray = ["CAD","EUR","GBP","JPY","USD"]
    let widthRatio:CGFloat = 0.5
    let audTextFieldTag = 123
    let pagingScrollViewTag = 222
    let unselectedLabelAlpha:CGFloat = 0.2
    
    var selectedCurrencyTag = 0
...
